--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^15.6.1",
     "react-dev-utils": "^0.4.2",
     "react-router": "^4.1.2",
+    "react-sidecar": "^0.1.1",
     "recursive-readdir": "2.1.0",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "strip-ansi": "3.0.1",
